--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,28 @@
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  a {
+    @apply text-nav-default hover:text-nav-hover active:text-nav-active;
+  }
+  body {
+    @apply bg-primary text-primary;
+  }
+}
+
+@layer components {
+  .btn-primary {
+    @apply bg-btn-primary hover:bg-btn-primary-hover
+  }
+}
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
+  
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
@@ -15,11 +33,3 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
