feat:gallery section

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
 
 @layer base {
@@ -15,6 +16,7 @@
   }
   body {
     @apply bg-primary text-primary font-sans;
+    overflow-x: hidden;
   }
 }
 
